--- a/index.html
+++ b/index.html
@@ -160,7 +160,8 @@
                     <div class="works_btn works_btn_active"><a href="#tab1">官網類型</a></div>
                     <div class="works_btn"><a href="#tab2">行銷類型</a></div>
                     <div class="works_btn"><a href="#tab3">APP&amp;後台</a></div>
-                    <div class="works_btn"><a href="#tab4">PS繪圖</a></div>
+                    <div class="works_btn"><a href="#tab4">UX知識</a></div>
+                    <div class="works_btn"><a href="#tab5">PS繪圖</a></div>
                 </div>
             </div>
             <div>
@@ -217,18 +218,9 @@
                     </div>
 
                     <div class="works_item_container">
-                        <div id="p12" class="works_item item_show_pic" role="button">
-                            <div class="works_item_pic"><img id="t1_5" src="image/p12s.jpg" alt="" />
-                                <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
-                            </div>
-                            <div class="works_item_bar"><span>Suzuki產品官網設計提案</span></div>
-                        </div>
-                    </div>
-
-                    <div class="works_item_container">
                         <a href="website/home-teacher191031/index.html" target="_blank" role="button">
                             <div class="works_item">
-                                <div class="works_item_pic"><img id="t1_6" src="image/w5s.jpg" alt="" />
+                                <div class="works_item_pic"><img id="t1_5" src="image/w5s.jpg" alt="" />
                                     <div class="works_item_sq"><img src="image/link_icon.png" alt="" /></div>
                                 </div>
                                 <div class="works_item_bar"><span>家教派遣平台-風格嘗試</span></div>
@@ -277,14 +269,13 @@
                         </div>
                     </div>
                     <div class="works_item_container">
-                        <div id="p3" class="works_item item_show_pic">
-                            <div class="works_item_pic"><img id="t2_4" src="image/p3s.jpg" alt="" />
+                        <div id="p12" class="works_item item_show_pic" role="button">
+                            <div class="works_item_pic"><img id="t2_4" src="image/p12s.jpg" alt="" />
                                 <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
                             </div>
-                            <div class="works_item_bar"><span>產品推廣網頁</span></div>
+                            <div class="works_item_bar"><span>Suzuki商品專頁</span></div>
                         </div>
                     </div>
-
                     <div class="works_item_container">
                         <div id="p1" class="works_item item_show_pic">
                             <div class="works_item_pic"><img id="t2_5" src="image/p1s.jpg" alt="" />
@@ -293,6 +284,16 @@
                             <div class="works_item_bar"><span>3折DM</span></div>
                         </div>
                     </div>
+
+                    <div class="works_item_container" style="display:none;">
+                        <div id="p3" class="works_item item_show_pic">
+                            <div class="works_item_pic"><img id="t2_4" src="image/p3s.jpg" alt="" />
+                                <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
+                            </div>
+                            <div class="works_item_bar"><span>產品推廣網頁</span></div>
+                        </div>
+                    </div>
+
                 </div>
 
                 <div id="tab3" class="works_item_area">
@@ -363,6 +364,31 @@
                 </div>
 
                 <div id="tab4" class="works_item_area">
+
+                    <div class="works_item_container">
+                        <a href="website/ux/page_1.html" target="_blank">
+                            <div class="works_item">
+                                <div class="works_item_pic"><img id="" src="image/u1s.jpg" alt="" />
+                                    <div class="works_item_sq"><img src="image/link_icon.png" alt="" /></div>
+                                </div>
+                                <div class="works_item_bar"><span>使用者訪談流程要點</span></div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="works_item_container" style="display:none;">
+                        <a href="website/ux/page_2.html" target="_blank">
+                            <div class="works_item">
+                                <div class="works_item_pic"><img id="" src="image/u2s.jpg" alt="" />
+                                    <div class="works_item_sq"><img src="image/link_icon.png" alt="" /></div>
+                                </div>
+                                <div class="works_item_bar"><span>易用性測試方法</span></div>
+                            </div>
+                        </a>
+                    </div>
+
+                </div>
+
+                <div id="tab5" class="works_item_area">
 
                     <div class="works_item_container">
                         <div id="s1" class="works_item item_show_pic">
@@ -448,9 +474,9 @@
         <div class="pup_img_container">
             <img src="work_image/p17-1.png" alt="" />
             <img src="work_image/p17-2.png" alt="" />
-            <img src="work_image/p17-3.png" alt="" />
+            <img src="work_image/p17-3.png" style="display:none;" alt="" />
             <img src="work_image/p17-4.png" alt="" />
-            <img src="work_image/p17-5.png" alt="" />
+            <img src="work_image/p17-5.png" style="display:none;" alt="" />
             <img src="work_image/p17-6.png" alt="" />
             <img src="work_image/p17-7.png" alt="" />
             <img src="work_image/p17-8.png" alt="" />
@@ -491,6 +517,7 @@
     $('.pup_close_icon,.pup_bg').click(function() {
         $('.pup_container').fadeOut(500);
     });
+
 </script>
 <script>
     $('.item_show_pic_2').click(function() {
@@ -499,6 +526,7 @@
     $('.pup_close_icon,.pup_bg').click(function() {
         $('.pup_container_2').fadeOut(500);
     });
+
 </script>
 <script>
     $('.item_show_pic_3').click(function() {
@@ -507,6 +535,7 @@
     $('.pup_close_icon,.pup_bg').click(function() {
         $('.pup_container_3').fadeOut(500);
     });
+
 </script>
 <script>
     $('.item_show_pic_4').click(function() {
@@ -515,6 +544,7 @@
     $('.pup_close_icon,.pup_bg').click(function() {
         $('.pup_container_4').fadeOut(500);
     });
+
 </script>
 <script>
     if ($(window).width() <= 900) {
