--- a/website/ux/page_1.html
+++ b/website/ux/page_1.html
@@ -79,8 +79,8 @@
                 </div>
                 <div class="page_main_note">Introduce</div>
                 <div class="page_main_text">
-                    使用者訪談是使用者研究中常用的一種方法，是運用有目的、有計劃、有方法的口頭交談方式，是一種研究型的交談，是通過談話雙方的口頭交流，對有意識要獲得的資料的收集和梳理。<br />
-                    過程中必須力求真實，不能隨便對使用者所說的話表示贊同或者評價，並且過程中需伴隨著記錄，訪談後還要進行事後的整理和總結。
+                    使用者訪談是使用者研究中常用的一種方法，是運用有目的、計劃、方法的口頭交談方式，是一種研究型的交談，是通過談話雙方的口頭交流，有意識獲得資料收集和整理。<br />
+                    過程中必須力求真實，不能隨便對使用者所說的話表示認同或評價，並且過程中需伴隨記錄，訪談後還要進行事後的整理和總結。
                 </div>
             </div>
         </div>
@@ -101,13 +101,13 @@
                 </div>
                 <div class="page_main_note">Usage Scenarios</div>
                 <div class="page_main_text">
-                    使用者訪談，通常適用於比較複雜的話題性場景中，例如：對經歷和過程仔細的研究，需要採集使用者的觀點以及情感等；對於復雜行為的剖析，例如：使用者是如何理解APP詳情頁各個模塊之間的關係的。
+                    使用者訪談，通常適用於比較複雜的話題性場景中，例如：對經歷和過程仔細的研究，當下紀錄使用者的觀點以及情感等；對於複雜行為的剖析，例如：使用者是如何理解APP頁面各區塊之間的關係。
                 </div>
                 <div class="page_main_text">
-                    對於敏感或者私密性的話題，使用一對一的訪談法可以鼓勵被訪者願意討論；常見的定量研究，例如問卷調研和數據分析可以獲得大量的使用者行為數據，但卻無法深入了解使用者做出某種行為的具體原因和場景。
+                    對於敏感或者私密性的話題，使用一對一的訪談法可以鼓勵被訪者願意討論；常見的定量研究，例如：問卷調查和數據分析可以獲得大量的使用者行為數據，但卻無法深入了解使用者做出行為的具體原因和場景。
                 </div>
-                <div class="page_main_text">
-                    我們可以通過數據分析得知某個頁面的跳出率增加，卻無法了解到使用者這樣做的實際原因和場景。而這個時候，使用者訪談這樣的定性研究，就可以起到一定的補充作用。
+                <div class="page_main_text" style="display:block;">
+                    我們可以通過數據分析得知操作數據，如：某個頁面的跳出率增加，卻無法<span class="point_text">了解使用者這樣做的實際原因和場景。此時使用者訪談就可以起到一定的補充作用</span>。
                 </div>
             </div>
         </div>
@@ -175,13 +175,13 @@
                 </div>
                 <div class="page_main_note">Contextual Inquiry</div>
                 <div class="page_main_text">
-                    由Karen Holtzblatt所開發出來的訪談法，最大的特點就是，使用者把自己的體驗教給訪談人員。
+                    由Karen Holtzblatt所開發出來的訪談法，最大的特點就是使用者把自己的體驗傳授給訪談人員。
+                </div>
+                <div class="page_main_text" style="display:block;">
+                    一旦<span class="point_text">使用者轉化成為了傳授者，那麼他就不會只講結論，而是會嘗試著說清楚前因後果</span>。此時訪談人員再稍加詢問細節，就很容易得知深層次的資訊。
                 </div>
                 <div class="page_main_text">
-                    一旦使用者轉化成為了教授者，那麼他就不會只講結論，而是會嘗試著講清楚前因後果。此時如果訪談人員再稍加把控，就很容易得知深層次的問題。
-                </div>
-                <div class="page_main_text">
-                    而我們為了讓使用者能夠不知不覺地進入教授者的角色，訪談人員必須掌握一定的技巧，這樣才能獲取有效的信息，而此時用到的最基本的技能就是引入、追問到底、重覆敘述。
+                    而我們為了讓使用者能夠不知不覺地進入傳授者的角色，訪談人員必須掌握一定的技巧，這樣才能獲取有效的資訊，而此時用到三大技巧步驟就是「引入、追問到底、重覆敘述」。
                 </div>
             </div>
         </div>
@@ -201,10 +201,10 @@
                     <div>引入</div>
                 </div>
                 <div class="page_main_text">
-                    在訪談剛剛開始的時候，我們會先進行暖場提問，問幾個簡單的基礎性問題來幫助使用者快速的消除緊張感。
+                    在訪談開始的時候，訪談人員可以進行暖場提問，問幾個簡單的基礎問題來幫助使用者消除緊張感。
                 </div>
                 <div class="page_main_text">
-                    在這之後就要把話題慢慢的引入我們想要了解的特定主題上，進行深入的挖掘。這個過程中，需要明確的告訴使用者“我想知道的是什麼”，後續的訪談內容需要越來越聚焦到這個問題上來。
+                    循序漸境把話題慢慢的引入我們想要了解的主題上，進行深入探討。過程中需要明確的告訴使用者「我想知道的是什麼」，後續越來越聚焦到訪談所訂下的計畫目的。
                 </div>
             </div>
         </div>
@@ -223,11 +223,11 @@
                 <div class="page_main_title" style="margin-bottom:20px;">
                     <div>追問到底</div>
                 </div>
-                <div class="page_main_text">
-                    情景式訪談並不是聽取和記錄使用者所說的內容就行了，只有當我們完全了解了使用者所說的話，才能算是真正的情景式訪談。
+                <div class="page_main_text" style="display:block;">
+                    情景式訪談並<span class="point_text">不是只聽取和記錄使用者所說的內容，只有訪談人員完全理解使用者所要表達的意思</span>，才能算是真正的情景式訪談。
                 </div>
                 <div class="page_main_text">
-                    而為了做到這一點，使用者的行為和說明哪怕哪裡出現了任何不能理解的內容，訪談人員也必須刨根問底。如果內容含糊不清，就會出現訪談人員在訪談結束後根據自己的臆想詮釋使用者行為的情況。
+                    而為了做到這一點，使用者的行為和說明出現了不能理解的內容，訪談人員必須追問到底。如果內容含糊不清，就會出現訪談人員在訪談結束後根據自己的臆測詮釋使用者行為的情況，失去訪談的正確性。
                 </div>
             </div>
         </div>
@@ -257,10 +257,10 @@
                     使用者：嗯，對的。
                 </div>
                 <div class="page_main_text">
-                    在訪談的過程中，使用者常常會回答像“總是”、“經常”、“不是特別高”這樣的概括與抽象的名詞，這些詞語一百個人會有一百個理解。
+                    訪談過程中，使用者常常會回答「總是」、「經常」、「偶爾」這樣的概括與抽象的名詞，這些詞語一百個人會有一百個理解。
                 </div>
-                <div class="page_main_text">
-                    遇到這些回答時，訪談人員一定要盡量使用多追問，多重複的方式，盡量量化用戶回答。當然，使用者不可能向專業統計人員一樣向你提供統計信息。但是至少你需要了解使用者的“非常頻繁”是“一半以上”還是“接近90％”。
+                <div class="page_main_text" style="display:block;">
+                    遇到這樣的回答時，訪談人員一定要盡量使用<span class="point_text">多追問多重複的方式，盡量數據化使用者回答</span>。當然，使用者不可能都向你提供準確數字的訊息。但是至少你需要了解使用者的「常常」是「一半以上」還是「接近90％」。
                 </div>
             </div>
         </div>
@@ -280,10 +280,10 @@
                     <div>追問到底-常見錯誤</div>
                 </div>
                 <div class="page_main_text">
-                    追問到底容易犯的一個問題就是過多的詢問使用者為什麼。並不是問為什麼不好，只是頻繁的問“為什麼”，使用者容易產生“哪來這麼多為什麼”的厭煩心理，對我們的訪談產生這樣不耐煩的情緒，我們就很難收集到真正需要的內容了。
+                    追問到底容易犯是過多的詢問使用者為什麼。頻繁的問「為什麼」，使用者容易產生厭煩心理，對訪談產生不耐煩的情緒，訪談就很難收集到真正需要的內容了。
                 </div>
-                <div class="page_main_text">
-                    所以可以避免的方法是，首先我們需要引導使用者對他當時的使用場景進行還原，然後了解使用者所產生的行為，在針對場景和行為去挖掘使用者產生這種體驗感受的動機，我們就能回答“為什麼”這個問題了。
+                <div class="page_main_text" style="display:block;">
+                    所以可以避免的方法是，我們需要<span class="point_text">引導使用者進行還原過程，然後了解使用者所產生的行為，在針對場景和行為去詢問使用者產生感受的原因</span>，針對其重點問「為什麼」。
                 </div>
             </div>
         </div>
@@ -302,8 +302,8 @@
                 <div class="page_main_title" style="margin-bottom:20px;">
                     <div>重覆敘述</div>
                 </div>
-                <div class="page_main_text">
-                    如果訪談人員已經確定了解使用者的真正意思，可以把理解的內容用自己的話敘述給使用者聽，請使用者確認是否符合他的意思。如果有理解錯誤的地方，讓使用者幫你糾正出來。
+                <div class="page_main_text" style="display:block;">
+                    如果訪談人員已經<span class="point_text">確定了解使用者的真正意思，可以把理解的內容用自己的話敘述給使用者聽，請使用者確認是否符合他的意思</span>。如果有理解錯誤的地方，讓使用者幫你糾正出來。
                 </div>
                 <div class="page_main_text">
                     有時使用者還會根據你的敘述追加一些他當時沒有想到的關聯訊息，這樣又可以得到更多使用體驗的內容。
@@ -318,6 +318,30 @@
         </div>
     </div>
     <!-- ... p10 主題版面end ... -->
+    <!-- ... p11 主題版面 ... -->
+    <div id="p10" class="main_title_page page_rule">
+        <div class="page_main_container">
+            <div class="page_main_content">
+                <div class="page_main_title" style="margin-bottom:20px;">
+                    <div>訪談獲取重點</div>
+                </div>
+                <div class="page_main_text">
+                    大多數使用者在訪談中，常會提到「我用過某項功能但是覺得不太好用」等等。<br/>
+                    使用者所提的回憶和思考後的意見，但這些無法完全保證客觀正確性，因此即使反覆分析這樣的資訊也不會有明確的結果。
+                </div>
+                <div class="page_main_text" style="display:block;">
+                    而訪談中<span class="point_text">真正要的是使用者當下操作的反應，從旁客觀紀錄未經加工的第一手訊息</span>，能在此基礎上進行分析，反而能發現一些甚至使用者自己都未曾發現的潛在需求。
+                </div>
+            </div>
+        </div>
+        <div class="page_bottom_block">
+            <div class="page_number">11<span>page</span></div>
+            <div class="page_text">
+                USER INTERVIEW
+            </div>
+        </div>
+    </div>
+    <!-- ... p11 主題版面end ... -->
 
 
 
