--- a/website/ux/page_1.html
+++ b/website/ux/page_1.html
@@ -49,7 +49,7 @@
                 <div class="page_main_title">
                     <div>使用者訪談流程要點</div>
                 </div>
-                <div class="page_main_note">目前10頁內容，建置中</div>
+                <div class="page_main_note">目前27頁內容，建置中</div>
             </div>
         </div>
 
@@ -240,7 +240,7 @@
     </div>
     <!-- ... p7 主題版面end ... -->
     <!-- ... p8 主題版面 ... -->
-    <div id="p7" class="main_title_page page_rule">
+    <div id="p8" class="main_title_page page_rule">
         <div class="page_main_container">
             <div class="page_main_content">
                 <div class="page_main_title" style="margin-bottom:20px;">
@@ -273,7 +273,7 @@
     </div>
     <!-- ... p8 主題版面end ... -->
     <!-- ... p9 主題版面 ... -->
-    <div id="p7" class="main_title_page page_rule">
+    <div id="p9" class="main_title_page page_rule">
         <div class="page_main_container">
             <div class="page_main_content">
                 <div class="page_main_title" style="margin-bottom:20px;">
@@ -319,14 +319,14 @@
     </div>
     <!-- ... p10 主題版面end ... -->
     <!-- ... p11 主題版面 ... -->
-    <div id="p10" class="main_title_page page_rule">
+    <div id="p11" class="main_title_page page_rule">
         <div class="page_main_container">
             <div class="page_main_content">
                 <div class="page_main_title" style="margin-bottom:20px;">
                     <div>訪談獲取重點</div>
                 </div>
                 <div class="page_main_text">
-                    大多數使用者在訪談中，常會提到「我用過某項功能但是覺得不太好用」等等。<br/>
+                    大多數使用者在訪談中，常會提到「我用過某項功能但是覺得不太好用」等等。<br />
                     使用者所提的回憶和思考後的意見，但這些無法完全保證客觀正確性，因此即使反覆分析這樣的資訊也不會有明確的結果。
                 </div>
                 <div class="page_main_text" style="display:block;">
@@ -342,7 +342,407 @@
         </div>
     </div>
     <!-- ... p11 主題版面end ... -->
+    <!-- ... p12 主題版面 ... -->
+    <div id="p12" class="main_title_page page_rule">
+        <div class="page_main_container">
+            <div class="page_main_content">
+                <div class="page_main_title">
+                    <div>訪談前期工作</div>
+                </div>
+                <div class="page_main_note">Prepare</div>
+                <div class="page_main_text" style="display:block;">
+                    1.確立訪談目的：為了哪些問題或原因進行訪談。
+                </div>
+                <div class="page_main_text" style="display:block;">
+                    2.訂立訪談規劃：訪談形式、安排成員與工作、招募使用者方法、時程排定。
+                </div>
+                <div class="page_main_text" style="display:block;">
+                    3.編寫訪談內容：羅列問題點，預想可能情況安排備用計畫。
+                </div>
+                <div class="page_main_text" style="display:block;">
+                    4.招募使用者：發布訊息、篩選條件、進行聯絡。
+                </div>
+                <div class="page_main_text" style="display:block;">
+                    5.訪談前確認：設備清單、呈現資料、預定場地、相關人員和訪談內容熟悉。
+                </div>
+            </div>
+        </div>
+        <div class="page_bottom_block">
+            <div class="page_number">12<span>page</span></div>
+            <div class="page_text">
+                USER INTERVIEW
+            </div>
+        </div>
+    </div>
+    <!-- ... p12 主題版面end ... -->
+    <!-- ... p13 主題版面 ... -->
+    <div id="p13" class="main_title_page page_rule">
+        <div class="page_main_container">
+            <div class="page_main_content">
+                <div class="page_main_title" style="margin-bottom:20px;">
+                    <div>招募使用者</div>
+                </div>
+                <div class="page_main_text" style="display:block;">
+                    是訪談計畫中能否有效達成目標的重點之一，有4項要點，<span class="point_text">招募途徑、篩選方式、整理分類、訪談時程</span>
+                </div>
+            </div>
+        </div>
+        <div class="page_bottom_block">
+            <div class="page_number">13<span>page</span></div>
+            <div class="page_text">
+                USER INTERVIEW
+            </div>
+        </div>
+    </div>
+    <!-- ... p13 主題版面end ... -->
+    <!-- ... p14 主題版面 ... -->
+    <div id="p14" class="main_title_page page_rule">
+        <div class="page_main_container">
+            <div class="page_main_content">
+                <div class="page_main_title" style="margin-bottom:20px;">
+                    <div>使用者招募途徑</div>
+                </div>
+                <div class="page_main_text" style="display:block;">
+                    依照訪談計畫的需求，可從
+                    1.自家產品後台資料。
+                    2.發布活動問卷。
+                    3.委外人力市調公司。
+                </div>
+            </div>
+        </div>
+        <div class="page_bottom_block">
+            <div class="page_number">14<span>page</span></div>
+            <div class="page_text">
+                USER INTERVIEW
+            </div>
+        </div>
+    </div>
+    <!-- ... p14 主題版面end ... -->
+    <!-- ... p15 主題版面 ... -->
+    <div id="p15" class="main_mockup_page page_rule">
+        <div class="page_main_container">
+            <div class="page_main_content">
+                <div class="page_main_title" style="margin-bottom:20px;">
+                    <div>使用者篩選</div>
+                </div>
+                <div class="page_main_text" style="display:block;">
+                    首先根據產品屬性確立目標客群條件，如：性別、年齡、婚姻狀況、職業、居住條件...等，然後從有意願參與的使用者中選出符合條件的人。
+                </div>
+                <div class="page_main_pic">
+                    範例<br />
+                    <img src="image/from_1.png">
+                    <img src="image/from_2.png">
+                    <img src="image/from_3.png">
+                </div>
+            </div>
+        </div>
+        <div class="page_bottom_block">
+            <div class="page_number">15<span>page</span></div>
+            <div class="page_text">
+                USER INTERVIEW
+            </div>
+        </div>
+    </div>
+    <!-- ... p15 主題版面end ... -->
 
+    <!-- ... p16 主題版面 ... -->
+    <div id="p16" class="main_title_page page_rule">
+        <div class="page_main_container">
+            <div class="page_main_content">
+                <div class="page_main_title" style="margin-bottom:20px;">
+                    <div>問卷篩選-定義條件</div>
+                </div>
+                <div class="page_main_text" style="display:block;">
+                    1.基本資料：年齡、性別、職業、居住地區...等。
+                </div>
+                <div class="page_main_text" style="display:block;">
+                    2.進階資料：教育程度、資產、年收入、存款...等。
+                </div>
+                <div class="page_main_text" style="display:block;">
+                    3.產品使用：使用時間、使用頻率、單次使用時長...等。
+                </div>
+                <div class="page_main_text" style="display:block;">
+                    4.使用目標：使用原因、常用功能、產品優點、產品可改善或期望...等。
+                </div>
+                <div class="page_main_text" style="display:block;">
+                    5.其他資訊：從哪裡得知我們的產品、覺得哪個同類產品更好...等。
+                </div>
+            </div>
+        </div>
+        <div class="page_bottom_block">
+            <div class="page_number">16<span>page</span></div>
+            <div class="page_text">
+                USER INTERVIEW
+            </div>
+        </div>
+    </div>
+    <!-- ... p16 主題版面end ... -->
+    <!-- ... p17 主題版面 ... -->
+    <div id="p17" class="main_title_page page_rule">
+        <div class="page_main_container">
+            <div class="page_main_content">
+                <div class="page_main_title" style="margin-bottom:20px;">
+                    <div>使用者資料整理</div>
+                </div>
+                <div class="page_main_pic">
+                    範例<br />
+                    <img src="image/from_4.png">
+                </div>
+            </div>
+        </div>
+        <div class="page_bottom_block">
+            <div class="page_number">17<span>page</span></div>
+            <div class="page_text">
+                USER INTERVIEW
+            </div>
+        </div>
+    </div>
+    <!-- ... p17 主題版面end ... -->
+    <!-- ... p18 主題版面 ... -->
+    <div id="p17" class="main_title_page page_rule">
+        <div class="page_main_container">
+            <div class="page_main_content">
+                <div class="page_main_title" style="margin-bottom:20px;">
+                    <div>訪談時程表</div>
+                </div>
+                <div class="page_main_pic">
+                    範例<br />
+                    <img src="image/from_5.png">
+                </div>
+            </div>
+        </div>
+        <div class="page_bottom_block">
+            <div class="page_number">18<span>page</span></div>
+            <div class="page_text">
+                USER INTERVIEW
+            </div>
+        </div>
+    </div>
+    <!-- ... p18 主題版面end ... -->
+    <!-- ... p19 左右圖 文字版面 ... -->
+    <div class="main_title_page page_rule">
+        <div class="page_main_container">
+            <div class="m_pic_left">
+                <img src="image/bad_icon.png">
+                <picture>
+                    <img src="image/p2.jpg">
+                </picture>
+            </div>
+            <div class="page_main_content">
+                <div class="page_main_subtitle">
+                    場地選擇
+                </div>
+                <div class="page_main_text">
+                    場所的選擇也會對訪談有些影響，如圖：應該盡量塑造溫馨舒適的氛圍以消除用戶的緊張感。
+                </div>
+            </div>
+            <div class="m_pic_right">
+                <img src="image/good_icon.png">
+                <picture>
+                    <img src="image/p1.jpg">
+                </picture>
+            </div>
+        </div>
+
+        <div class="page_bottom_block">
+            <div class="page_number">19<span>page</span></div>
+            <div class="page_text">
+                USER INTERVIEW
+            </div>
+        </div>
+    </div>
+    <!-- ... p19 左右圖 文字版面end ... -->
+    <!-- ... p20 主題版面 ... -->
+    <div id="p20" class="main_title_page page_rule">
+        <div class="page_main_container">
+            <div class="page_main_content">
+                <div class="page_main_title">
+                    <div>訪談工具清單</div>
+                </div>
+                <div class="page_main_note">List of Items</div>
+                <div class="page_main_text">
+                    測試：產品裝置。<br />
+                    紀錄：電腦、紙筆、錄音設備。<br />
+                    訪談：計畫大綱、提問列表。<br />
+                    合約：相關協議書(如：使用授權、錄音許可、個資使用...等)。
+                </div>
+            </div>
+        </div>
+        <div class="page_bottom_block">
+            <div class="page_number">20<span>page</span></div>
+            <div class="page_text">
+                USER INTERVIEW
+            </div>
+        </div>
+    </div>
+    <!-- ... p20 主題版面end ... -->
+    <!-- ... p21 主題版面 ... -->
+    <div id="p21" class="main_mockup_page">
+        <div class="page_main_container">
+            <div class="page_main_content">
+                <div class="page_main_title">
+                    <div>進行訪談</div>
+                </div>
+                <div class="page_main_note">Interview</div>
+                <div class="page_main_text">
+                    開場白建立信賴關係
+                </div>
+                <div class="page_main_text">
+                    如果和使用者見面就上單刀直入切入正題開始進行訪談，那麼訪談可能無法順利進行。因為使用者還處於陌生緊張狀態，訪談人員和使用者之間還沒有建立起基本關係。
+                </div>
+                <div class="page_main_text">
+                    首先可以進行簡單的寒暄和自我介紹。通過輕鬆的溝通先活躍氣氛讓使用放鬆，接著就可以向使用者說明訪談目和內容，因訪談非一般談話聊天，如果不事先說明，訪談過程中就可能會受阻。
+                </div>
+                <div class="page_main_text">
+                    舉個例子：<br />
+                    您好，我是某某公司的訪談人員，我是XXX，這是我的同事XXX，謝謝您這次願意前來。這次我們希望了解(訪談目標)，所以想請您聊聊您使用產品的情況。
+                    我們有準備一些簡單的問題主要是包括情況(訪談內容)，希望能夠通過聊天的形式向您了解，大概需要1小時左右時間。<br />
+                    過程中所有聊到的問題沒有對錯之分，您只需要分享真實的想法和經歷就可以了。如果對任何問題有疑問或是不知道直接說，不需要有任何的顧慮。
+                    您提供的訊息能幫助我們更好了解使用者，改進我們的服務與產品。我們會對整個談話進行記錄，因為訊息量可能很大，我們希望能夠錄音。錄音內容只用於分析，不會公開，不知道您是否介意？
+                    如果介意的話，也可以不錄音。在聊天的過程中，我們可能會就一些細節內容提出問題。可能會常常追問，請您不要介意。
+                </div>
+            </div>
+        </div>
+        <div class="page_bottom_block">
+            <div class="page_number">21<span>page</span></div>
+            <div class="page_text">
+                USER INTERVIEW
+            </div>
+        </div>
+    </div>
+    <!-- ... p21 主題版面end ... -->
+    <!-- ... p22 主題版面 ... -->
+    <div id="p22" class="main_title_page page_rule">
+        <div class="page_main_container">
+            <div class="page_main_content">
+                <div class="page_main_title" style="margin-bottom:20px;">
+                    <div>正式訪談</div>
+                </div>
+                <div class="page_main_text">
+                    和使用者建立起基本關係後，接著把話題引入到產品的使用。通過訪談，逐漸明確詢問使用者是如何使用產品。<br />
+                    一般有五個部分的問題構成，分別是基本訊息、過往經歷、產品感受、體驗流程、競品體驗、最後根據訪談內容再深究細節。
+                </div>
+            </div>
+        </div>
+        <div class="page_bottom_block">
+            <div class="page_number">22<span>page</span></div>
+            <div class="page_text">
+                USER INTERVIEW
+            </div>
+        </div>
+    </div>
+    <!-- ... p22 主題版面end ... -->
+    <!-- ... p23 主題版面 ... -->
+    <div id="p23" class="main_title_page page_rule">
+        <div class="page_main_container">
+            <div class="page_main_content">
+                <div class="page_main_title" style="margin-bottom:20px;">
+                    <div>正式訪談-基本訊息</div>
+                </div>
+                <div class="page_main_text">
+                    方便我們了解使用者。從基本訊息的詢問開始就需要考慮後續的對話應該如何展開。<br />
+                    前面講到的「情景訪談法」就是在請教的名義下，讓使用者談論自己的使用體驗。會從職業、興趣...等開始切入。一方面能夠幫訪談人員建立起用戶形象，另一方面也能讓使用者進入情景式訪談的傳授者角色中來。
+                </div>
+            </div>
+        </div>
+        <div class="page_bottom_block">
+            <div class="page_number">23<span>page</span></div>
+            <div class="page_text">
+                USER INTERVIEW
+            </div>
+        </div>
+    </div>
+    <!-- ... p23 主題版面end ... -->
+    <!-- ... p24 主題版面 ... -->
+    <div id="p24" class="main_title_page page_rule">
+        <div class="page_main_container">
+            <div class="page_main_content">
+                <div class="page_main_title" style="margin-bottom:20px;">
+                    <div>正式訪談-過往經歷</div>
+                </div>
+                <div class="page_main_text">
+                    當使用者的話題逐漸被打開進入角色後。我們可以從日常的使用內容聊起了解具體的行為、操作或者場景。<br />
+                    然後逐漸進入整體，例如因為什麼開始使用銀行APP的，再按照日常的使用經驗、操作無法達成目標或是操作不順利的經歷和情況、其他同類產品的使用情況，這個基礎順序展開話題，逐層推進。
+                </div>
+            </div>
+        </div>
+        <div class="page_bottom_block">
+            <div class="page_number">24<span>page</span></div>
+            <div class="page_text">
+                USER INTERVIEW
+            </div>
+        </div>
+    </div>
+    <!-- ... p24 主題版面end ... -->
+    <!-- ... p25 主題版面 ... -->
+    <div id="p25" class="main_title_page page_rule">
+        <div class="page_main_container">
+            <div class="page_main_content">
+                <div class="page_main_title" style="margin-bottom:20px;">
+                    <div>正式訪談-產品感受</div>
+                </div>
+                <div class="page_main_text">
+                    在對使用者形象以及過往使用產品的經歷有了解後，需要我們準備好安裝最新版本產品的測試機供使用者使用，我們就可以對實際使用產品時的體驗進行詢問了。
+                </div>
+            </div>
+        </div>
+        <div class="page_bottom_block">
+            <div class="page_number">25<span>page</span></div>
+            <div class="page_text">
+                USER INTERVIEW
+            </div>
+        </div>
+    </div>
+    <!-- ... p25 主題版面end ... -->
+    <!-- ... p26 主題版面 ... -->
+    <div id="p26" class="main_title_page page_rule">
+        <div class="page_main_container">
+            <div class="page_main_content">
+                <div class="page_main_title" style="margin-bottom:20px;">
+                    <div>正式訪談-體驗流程</div>
+                </div>
+                <div class="page_main_text">
+                    我們通常需要先給使用者一個操作任務並營造一個場景。<br />
+                    例如：您到一個商家進行購買時發現忘記帶錢包，而商家提供電子轉帳付款的服務。請您打開銀行APP進行電子轉帳的操作。
+                </div>
+                <div class="page_main_text">
+                    訪談人員需要觀察當下使用者完成任務的過程，後續進行相關的產品提問。體驗完成後以評分方式邀請用戶對於使用體驗進行評分和描述給分原因。
+                </div>
+                <div class="page_main_text">
+                    另外設計風格問題則是側重產品互動體驗以及視覺感受。<br />
+                    例如：對於現有的頁面結構和排版覺得是否喜歡、瀏覽頁面是否符合閱讀順序、轉跳頁面的互動形式看法等等，同樣可以邀請使用者進行打分。
+                </div>
+            </div>
+        </div>
+        <div class="page_bottom_block">
+            <div class="page_number">26<span>page</span></div>
+            <div class="page_text">
+                USER INTERVIEW
+            </div>
+        </div>
+    </div>
+    <!-- ... p26 主題版面end ... -->
+    <!-- ... p27 主題版面 ... -->
+    <div id="p27" class="main_title_page page_rule">
+        <div class="page_main_container">
+            <div class="page_main_content">
+                <div class="page_main_title" style="margin-bottom:20px;">
+                    <div>正式訪談-競品體驗</div>
+                </div>
+                <div class="page_main_text" style="display:block;">
+                    同樣需要準備好裝有競品最新版本產品的測試機，供使用者進行體驗。<br />
+                    可以選2~3個左右競品，<span class="point_text">從操作流程以及設計風格方面分別對使用進行提問並進行打分，後續可以與本公司產品的評分進行交叉比對。</span>
+                </div>
+            </div>
+        </div>
+        <div class="page_bottom_block">
+            <div class="page_number">27<span>page</span></div>
+            <div class="page_text">
+                USER INTERVIEW
+            </div>
+        </div>
+    </div>
+    <!-- ... p27 主題版面end ... -->
 
 
     <img src="image/nav_btn.png" class="open_choice_btn" style="display:none;" alt="" />
